# rust_xmldeserialize

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core/: mod.rs  xmlerror.rs  xmlutil.rs
